--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,17 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+node_modules
+node_modules/
 /.pnp
 .pnp.js
-frontend/node_modules
 
 # testing
 /coverage
 
 # production
-/build
+/frontend/build
+/frontend/node_modules
 
 # misc
 .DS_Store
@@ -23,3 +24,4 @@ frontend/node_modules
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.vscode/settings.json
